<resources>
    <string name="app_name">ECom</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">HOME</string>
    <string name="title_favorite">FAVORITES</string>
    <string name="title_cart">CART</string>
    <string name="search">Search</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="icon_like">Icon like</string>
    <string name="product_image">Product Image</string>
    <string name="recycler_view_description">"Favorite Products "</string>
    <string name="title_favorite_products">Favorites</string>
    <string name="empty_favorite_message">You haven\'t added a favorite product yet</string>
    <string name="placeholder_item_carousel">Carousel item placeholder</string>
    <string name="add_to_basket">Add to basket.</string>
    <string name="complete_the_order">Order Now</string>
    <string name="items">Items:</string>
    <string name="shipping">Shipping:</string>
    <string name="tax">Tax:</string>
    <string name="total">Total:</string>
    <string name="seller">Seller</string>
    <string name="product_size">Size:L</string>
    <string name="quantity">1</string>
    <string name="trash_basket_description">Trash basket button</string>
    <string name="minus_description">"Minus button "</string>
    <string name="plus_description">Plus button</string>
    <string name="star">Star icon</string>
    <string name="star_point">4.5</string>
    <string name="carousel_button">Carousel buton</string>
    <string name="review_value">(150)</string>
    <string name="reviews">Reviews</string>
    <string name="select_size">Select Size</string>
    <string name="size_s">S</string>
    <string name="size_m">M</string>
    <string name="size_l">L</string>
    <string name="size_xl">XL</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="cart_value">₺ 0</string>
    <string name="go_home">Return to Homepage</string>
    <string name="empty_cart_message">Start Shopping</string>
    <string name="cart_completed_message">Order Completed</string>
    <string name="search_related">Search Related</string>
    <string name="no_result_found">No Result Found</string>
    <string name="back_button">Back Button</string>
    <string name="title_cart_products">Cart</string>
    <string name="latest_searched">Latest searched</string>
</resources>