<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/dp_4">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/iv_item_product_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_4"
            android:src="@drawable/icon_product_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_seller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_4"
            android:text="@string/seller"
            android:textColor="@color/light_gray"
            app:layout_constraintStart_toEndOf="@id/iv_item_product_image"
            app:layout_constraintTop_toTopOf="@id/iv_item_product_image" />

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_4"
            android:text="@string/product_name"
            app:layout_constraintStart_toStartOf="@id/tv_seller"
            app:layout_constraintTop_toBottomOf="@id/tv_seller" />

        <TextView
            android:id="@+id/tv_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_4"
            android:text="@string/product_size"
            android:textColor="@color/light_gray"
            app:layout_constraintStart_toStartOf="@id/tv_product_name"
            app:layout_constraintTop_toBottomOf="@id/tv_product_name" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_4"
            android:text="@string/product_price"
            app:layout_constraintStart_toStartOf="@id/tv_size"
            app:layout_constraintTop_toBottomOf="@id/tv_size" />

        <ImageButton
            android:id="@+id/ib_trash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/trash_basket"
            android:contentDescription="@string/trash_basket_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_seller" />

        <ImageButton
            android:id="@+id/ib_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_minus"
            android:contentDescription="@string/minus_description"
            app:layout_constraintEnd_toStartOf="@id/quantity"
            app:layout_constraintTop_toTopOf="@id/tv_price" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_4"
            android:text="@string/quantity"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toBottomOf="@+id/ib_minus"
            app:layout_constraintEnd_toStartOf="@id/ib_plus"
            app:layout_constraintTop_toTopOf="@+id/ib_minus"
            app:layout_constraintVertical_bias="0.5" />

        <ImageButton
            android:id="@+id/ib_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/icon_plus"
            android:contentDescription="@string/plus_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_price" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>