<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="data"
            type="com.ibrahimaluc.ecom.data.local.FavoriteEntity" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/productCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"
        app:cardCornerRadius="@dimen/dp_4"
        app:cardElevation="@dimen/dp_2"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_like_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|end"
                android:contentDescription="@string/icon_like"
                android:padding="@dimen/dp_8"
                android:src="@drawable/icon_favorite_border" />

            <ImageView
                android:id="@+id/iv_product_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/product_image"
                android:getImage="@{data.images}"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/tv_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/product_name"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/product_price"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</layout>