<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.ibrahimaluc.ecom.domain.model.productHome.Product" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/productCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"
        app:cardCornerRadius="@dimen/dp_4"
        app:cardElevation="@dimen/dp_2"
        app:cardUseCompatPadding="true">


        <RelativeLayout
            android:layout_width="@dimen/dp_200"
            android:layout_height="@dimen/dp_250">

            <ImageView
                android:id="@+id/iv_product_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_200"
                android:contentDescription="@string/product_image"
                android:getImage="@{data.images}"
                android:scaleType="centerCrop"
                tools:src="@drawable/product_placeholder_gray" />

            <RelativeLayout
                android:id="@+id/favoriteLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_8"
                android:background="@drawable/favorite_background">

                <ImageButton
                    android:id="@+id/ib_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:contentDescription="@string/icon_like"
                    android:padding="@dimen/dp_2"
                    android:src="@drawable/icon_favorite_passive" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ratingLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8"
                android:background="@drawable/rating_background">


                <ImageView
                    android:id="@+id/iv_star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/dp_2"
                    android:contentDescription="@string/star"
                    android:src="@drawable/icon_star" />


                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dp_2"
                    android:layout_marginTop="@dimen/dp_2"
                    android:layout_marginEnd="@dimen/dp_2"
                    android:layout_marginBottom="@dimen/dp_2"
                    android:layout_toEndOf="@id/iv_star"
                    android:fontFamily="@font/semi_bold"
                    android:text="@string/star_point"
                    android:textSize="@dimen/sp_8" />

            </RelativeLayout>


            <TextView
                android:id="@+id/tv_product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_product_image"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_2"
                android:ellipsize="end"
                android:fontFamily="@font/inter_regular"
                android:maxLines="1"
                android:shortenText="@{data.name}"
                android:textSize="@dimen/sp_12"
                tools:text="@string/product_name" />

            <TextView
                android:id="@+id/tv_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_product_name"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_2"
                android:fontFamily="@font/semi_bold"
                android:text="@{'₺' + data.price.toString()}"
                android:textSize="@dimen/sp_12"
                tools:text="@string/product_price" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</layout>
